trunk/Archive2/6a/8604753a1d8b12/output
main.cpp:15:18: error: invalid application of 'sizeof' to a function type
    std::cout << sizeof(gg());
                 ^     ~~~~~~
1 error generated.
